--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="img/1.png" type="image/x-icon">
-</head>
+    <link rel="stylesheet" href="Style.css">
+    <link href="https://fonts.googleapis.com/css?family=Graphik:100,100i,200,200i,300,400&display=swap" rel="stylesheet">
+    <title>Education</title>
+  </head>
 
-<body>
-    <h1>Hello HTML!</h1>
-    <img width="400" src="img/1.png" alt="Bob Skiner">
-    <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+  <body>
+    <header>
+      <div id="header">
+        <ul class="header-main">
+          <li class="header-link"><a href="/">Home</a></li>
+          <li class="header-link"><a href="/">Product</a></li>
+          <li class="header-link"><a href="/">Pricing</a></li>
+          <li class="header-link"><a href="/">About</a></li>
+          <li class="header-link"><a href="/">Contact</a></li>
+        </ul>
+      <img class="figma" src="img/figma.png" alt="figma">
+      <a href=""><img class="social-icon" src="img/twitter.png" alt="twitter"></a>
+      <a href=""><img class="social-icon" src="img/facebook.png" alt="facebook"></a>
+      <a href=""><img class="social-icon" src="img/LinkedIn.png" alt="LinkedIn"></a>
+
+    </div>
+    
+    <div class="header-block">
+      <h1>The best products start with Figma</h1>
+      <h4 class="first-block">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+      <button class="button"><img src="img/button.png" alt="button"></button>
+    </div>
+
+  </header>
 </body>
-
 </html>
