--- a/index.html
+++ b/index.html
@@ -1,15 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Graphik:100,100i,200,200i,300,400&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="img/figma-shortcut-icon.svg" type="image/png">
+  <title>Figma Land</title>
 </head>
-<body>
 
-<section data-include="index.featured.partial.html"=""></section>
-  
-<script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+<body>
+  <header>
+    <section class="header__background">
+    <div class="header__nav">
+      <ul class="header__list">
+        <li class="header__link">Home</li>
+        <li class="header__link">Product</li>
+        <li class="header__link">Pricing</li>
+        <li class="header__link">About</li>
+        <li class="header__link">Contact</li>
+      </ul>
+
+      <img class="figma__logo" src="img/figma.svg" alt="figma-logo">
+      
+      <ul class="social__list">
+        <li class="social__link"><img src="img/twitter.png" alt="twitter-logo"></li>
+        <li class="social__link"><img src="img/facebook.png" alt="facebook-logo"></li>
+        <li class="social__link"><img src="img/linkedIn.png" alt="linkedIn-logo"></li>
+      </ul>
+    </div>
+  </section>
+
+    <section class="header__container">
+      <div class="header__information">
+        <h1 class="header__title">The best products start with Figma</h1>
+        <h4 class="header__description">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+      </div>
+      <button class="header__button">Try For Free</button>
+    </section>
+  </header>
+
+  <main>
+    <section class="features__block container">
+      <h2 class="features__title">Features</h2>
+      <h4 class="features__description">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+    </div>
+
+    <div class="features__items">
+      <img src="img/items-logo.svg" alt="items">
+    </div>
+
+    <div class="video__block">
+      <img src="img/video-screen-logo.svg" alt="video">
+    </section>
+
+    <!-- <div class="container-4">
+      <div class="content">
+        <h2 class="h2-container-4">Fastest way to organize</h2>
+        <h4 class="h4-container-4">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+        <button class="button-master">Try For Free</button>
+      </div>
+      <img class="macbook-img" src="img/macbook-pro.jpg" alt="Macbook">
+    </div>
+
+    <div class="container-5 container">
+      <img class="message-img" src="img/message-image.jpg" alt="message image">
+      <div class="block-text">
+        <h3 class="h3-container-5">At your fingertips</h3>
+        <h2 class="h2-container-5">Lightning fast prototyping</h2>
+        <h3 class="h3-container-5">Subscribe to our Newsletter</h3>
+        <p>Available exclusively on Figmaland</p>
+      </div>
+      <div class="input-submit container">
+        <img class="input-img" src="img/input.jpg" alt="input button">
+        <img src="img/master button.jpg" alt="input button">
+      </div>
+    </div>
+
+    <div class="container-6 container">
+      <h2 class="h2-container-6">Partners</h2>
+      <h4 class="h4-container-6">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+    </div>
+
+    <div class="company-img">
+      <img src="img/company.svg" alt="company-photo">
+      <button class="button-company">Try For Free</button>
+    </div>
+
+    <div class="container-7 container">
+      <h2 class="h2-container-7">Testimonials</h2>
+      <img class="logo-ibm" src="img/logos_ibm.svg" alt="logo-ibm">
+      <h4 class="h4-container-7">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</h4>
+      <img class="client-img" src="img/client.png" alt="client">
+      <button class="button-7">More Testimonials</button>
+    </div>
+
+    <div class="container-8">
+      <h2 class="h2-container-8">Pricing</h2>
+      <h4 class="h4-container-8">Most calendars are designed for teams. Slate is designed for freelancers</h4>
+
+      <div class="columns">
+        <div class="columns-1">
+          <h3 class="h3-columns">FREE</h3>
+          <h5 class="h5-colums">Organize across all apps by hand</h5>
+          <div class="price">
+            <h1 class="h1-columns-1">0</h1>
+            <h3 class="h3-columns-1">$</h3>
+            <h5 class="h5-columns-1">Per Month</h5>
+          </div>
+          <ul class="list">
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button class="button-8">Order Now</button>
+        </div>
+
+        <div class="columns-2">
+          <h3>STANDARD</h3>
+          <h5>Organize across all apps by hand</h5>
+          <h1>10</h1>
+          <h3>$</h3>
+          <h5>Per Month</h5>
+          <ul>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button>Order Now</button>
+        </div>
+
+        <div class="columns-3">
+          <h3>BUSINESS</h3>
+          <h5>Organize across all apps by hand</h5>
+          <h1>99</h1>
+          <h3>$</h3>
+          <h5>Per Month</h5>
+          <ul>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+            <li>Pricing Feature</li>
+          </ul>
+          <button>Order Now</button>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer></footer> -->
 </body>
+
 </html>
